@FunctionalInterface
interface WordFilter {
    boolean filter(String word);
}
